[package]
name = "please"
version = "0.1.1"
authors = ["Diggory Blake <diggsey@googlemail.com>"]
edition = "2018"
description = "Foundation for implementing long-lived database locks"
documentation = "https://docs.rs/please"
repository = "https://github.com/Diggsey/please"
license = "MIT OR Apache-2.0"

[dependencies]
diesel = { version = "1.3.3", features = ["postgres", "chrono"] }
chrono = "0.4.6"

[dev-dependencies]
dotenv = "0.13.0"
